/**
 * @fileoverview FeSetting gRPC å®¢æˆ¶ç«¯
 * 
 * ç”¨æ–¼ Drone æœå‹™èª¿ç”¨ FeSetting æœå‹™çš„ gRPC å®¢æˆ¶ç«¯
 * 
 * @module gRPC/Clients/FeSettingClient
 * @version 1.0.0
 * @author AIOT Team
 */

import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';
import { fileURLToPath } from 'url';

const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

/**
 * FeSetting gRPC å®¢æˆ¶ç«¯é¡åˆ¥
 */
export class FeSettingGrpcClient {
  private client: any;
  private serviceUrl: string;

  constructor() {
    // å¾ç’°å¢ƒè®Šæ•¸ç²å– FeSetting æœå‹™åœ°å€
    this.serviceUrl = process.env.FESETTING_SERVICE_URL || 'aiot-fesetting-service:50053';
    this.initializeClient();
  }

  /**
   * åˆå§‹åŒ– gRPC å®¢æˆ¶ç«¯
   */
  private initializeClient(): void {
    // è¼‰å…¥ FeSetting proto æ–‡ä»¶
    const PROTO_PATH = path.join(__dirname, '../../../proto/fesetting.proto');
    
    const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
      keepCase: true,
      longs: String,
      enums: String,
      defaults: true,
      oneofs: true,
    });

    const feSettingProto = grpc.loadPackageDefinition(packageDefinition) as any;
    
    // å‰µå»º gRPC å®¢æˆ¶ç«¯
    this.client = new feSettingProto.fesetting.FeSettingService(
      this.serviceUrl,
      grpc.credentials.createInsecure()
    );

    console.log(`ğŸ”— FeSetting gRPC Client initialized: ${this.serviceUrl}`);
  }

  /**
   * ç²å–ä½¿ç”¨è€…åå¥½è¨­å®š
   */
  async getUserPreferences(request: {
    user_id: number;
    category?: string;
  }): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.GetUserPreferences(request, (error: any, response: any) => {
        if (error) {
          console.error('âŒ FeSetting GetUserPreferences error:', error);
          reject(error);
        } else {
          console.log(`âœ… FeSetting GetUserPreferences success for user ${request.user_id}`);
          resolve(response);
        }
      });
    });
  }

  /**
   * å‰µå»ºä½¿ç”¨è€…åå¥½è¨­å®š
   */
  async createUserPreference(preferenceData: {
    user_id: number;
    preference_key: string;
    preference_value: string;
    category?: string;
  }): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.CreateUserPreference(preferenceData, (error: any, response: any) => {
        if (error) {
          console.error('âŒ FeSetting CreateUserPreference error:', error);
          reject(error);
        } else {
          console.log(`âœ… FeSetting CreateUserPreference success for user ${preferenceData.user_id}`);
          resolve(response);
        }
      });
    });
  }

  /**
   * æ›´æ–°ä½¿ç”¨è€…åå¥½è¨­å®š
   */
  async updateUserPreference(request: {
    preference_id: number;
    preference_value: string;
    category?: string;
  }): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.UpdateUserPreference(request, (error: any, response: any) => {
        if (error) {
          console.error('âŒ FeSetting UpdateUserPreference error:', error);
          reject(error);
        } else {
          console.log(`âœ… FeSetting UpdateUserPreference success for preference ${request.preference_id}`);
          resolve(response);
        }
      });
    });
  }

  /**
   * ç²å–ä½¿ç”¨è€…çš„ç„¡äººæ©Ÿç›¸é—œåå¥½è¨­å®š
   */
  async getUserDronePreferences(userId: number): Promise<any> {
    try {
      const response = await this.getUserPreferences({
        user_id: userId,
        category: 'drone'
      });
      
      return response;
    } catch (error) {
      console.error(`âŒ Failed to get drone preferences for user ${userId}:`, error);
      throw error;
    }
  }

  /**
   * è¨­ç½®ä½¿ç”¨è€…çš„ç„¡äººæ©Ÿæ“ä½œåå¥½
   */
  async setUserDronePreference(userId: number, key: string, value: string): Promise<any> {
    try {
      const preferenceData = {
        user_id: userId,
        preference_key: key,
        preference_value: value,
        category: 'drone'
      };
      
      const response = await this.createUserPreference(preferenceData);
      return response;
    } catch (error) {
      console.error(`âŒ Failed to set drone preference for user ${userId}:`, error);
      throw error;
    }
  }

  /**
   * é—œé–‰ gRPC é€£æ¥
   */
  close(): void {
    if (this.client) {
      this.client.close();
      console.log('ğŸ”Œ FeSetting gRPC Client connection closed');
    }
  }
}